force-app/main/default/objects/CommercientSF__SorMasterRep__c/CommercientSF__SorMasterRep__c.object-meta.xml
<CustomObject>
    <description>Syspro Sales Order table.</description>
    <label>Syspro Sales Order</label>
    <nameField>
        <label>Syspro Sales Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>