force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/capturehh__c.field-meta.xml
<CustomField>
    <fullName>capturehh__c</fullName>
    <label>CaptureHh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>