force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/capturemm__c.field-meta.xml
<CustomField>
    <fullName>capturemm__c</fullName>
    <label>CaptureMm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>