force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syspro Sales Orders (ShipTo Account)</relationshipLabel>
    <relationshipName>Syspro_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>