force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ActiveFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ActiveFlag__c</fullName>
    <label>Active orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>