force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__AlternateKey__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AlternateKey__c</fullName>
    <label>Alternate key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>