force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__AltShipAddrFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AltShipAddrFlag__c</fullName>
    <label>Alternate ship-to-add flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>