force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Branch__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Branch__c</fullName>
    <label>Branch code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>