force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CancelledFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CancelledFlag__c</fullName>
    <label>Cancelled order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>