force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CashCredit__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CashCredit__c</fullName>
    <label>Cash or credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>