force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CommissionSales1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionSales1__c</fullName>
    <label>1st salesperson commission</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>