force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CommissionSales2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionSales2__c</fullName>
    <label>2nd salesperson commission</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>