force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CommissionSales3_del__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionSales3_del__c</fullName>
    <label>CommissionSales3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>