force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CompanyTaxNo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CompanyTaxNo__c</fullName>
    <label>Company tax reg no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>