force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ConsolidatedOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConsolidatedOrder__c</fullName>
    <label>Consolidated order flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>