force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CounterSalesFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CounterSalesFlag__c</fullName>
    <label>Counter sales order flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>