force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CreditAuthority__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditAuthority__c</fullName>
    <label>Credit authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>