force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CreditedInvDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditedInvDate__c</fullName>
    <label>Date of invoice being credited</label>
    <type>Date</type>
</CustomField>