force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Currency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Currency__c</fullName>
    <label>Currency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>