force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerName__c</fullName>
    <label>Customer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>