force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DateLastDocPrt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastDocPrt__c</fullName>
    <label>Date of last document print</label>
    <type>Date</type>
</CustomField>