force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DateLastInvPrt__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastInvPrt__c</fullName>
    <label>Date invoice last printed</label>
    <type>Date</type>
</CustomField>