force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryNote__c</fullName>
    <label>Delivery note number generated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>