force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryTerms__c</fullName>
    <label>Delivery terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>