force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DelNoteSuffix__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DelNoteSuffix__c</fullName>
    <label>DelNoteSuffix</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>