force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DepositFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DepositFlag__c</fullName>
    <label>Counter sales deposit flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>