force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DiscPct1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct1__c</fullName>
    <label>1st trade discount percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>