force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__DispatchesMade__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DispatchesMade__c</fullName>
    <label>Dispatches have been made for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>