force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Email__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Email__c</fullName>
    <label>E-mail address for XML documen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>