force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__EntInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EntInvoice__c</fullName>
    <label>Invoice number (if entered)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>