force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__EntrySystemDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EntrySystemDate__c</fullName>
    <label>System date at entry</label>
    <type>Date</type>
</CustomField>