force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExchangeRate__c</fullName>
    <label>Exchange rate for conversion</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>