force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ExtendedTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExtendedTaxCode__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>