force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__GstDeduction__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstDeduction__c</fullName>
    <label>GST deduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>