force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__GstExemptFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstExemptFlag__c</fullName>
    <label>Federal tax exemption flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>