force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__GstExemptNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstExemptNum__c</fullName>
    <label>GST exemption number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>