force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__GstExemptORide__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstExemptORide__c</fullName>
    <label>GST exempt flag over-ride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>