force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__GtrReference__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GtrReference__c</fullName>
    <label>Goods in transit reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>