force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__InterWhSale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterWhSale__c</fullName>
    <label>Y - Inter-warehouse sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>