force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceNumber__c</fullName>
    <label>Invoice number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>