force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__InvTermsOverride__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvTermsOverride__c</fullName>
    <label>Invoice terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>