force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Job__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Job__c</fullName>
    <label>Job number used to create this</label>
    <length>255</length>
    <type>Text</type>
</CustomField>