force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__JobsExistFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__JobsExistFlag__c</fullName>
    <label>Flag to indicate if any jobs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>