force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__LastDelNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastDelNote__c</fullName>
    <label>Date last delivery note</label>
    <type>Date</type>
</CustomField>