force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__LastInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastInvoice__c</fullName>
    <label>Last invoice number used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>