force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__LastOperator__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastOperator__c</fullName>
    <label>Last operator to have changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>