force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__LineComp__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineComp__c</fullName>
    <label>Order lines to be shipped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>