force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__LiveDispExist__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LiveDispExist__c</fullName>
    <label>Live dispatches exist for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>