force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__MultiShipCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MultiShipCode__c</fullName>
    <label>Multiple ship-to-address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>