force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__NonMerchFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NonMerchFlag__c</fullName>
    <label>Y - non merch lines on order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>