force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__NumDispatches__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumDispatches__c</fullName>
    <label>Number of dispatches which</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>