force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Operator__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Operator__c</fullName>
    <label>Operator who released order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>