force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__OrdAcknwPrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrdAcknwPrinted__c</fullName>
    <label>Order acknowledgement printed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>