force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__OrderDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderDate__c</fullName>
    <label>Sales order date</label>
    <type>Date</type>
</CustomField>