force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderStatus__c</fullName>
    <label>Order status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>