force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__OrderStatusFail__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderStatusFail__c</fullName>
    <label>Saved order status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>