force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostalCode__c</fullName>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>