force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ProcessFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProcessFlag__c</fullName>
    <label>Process flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>