force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Quote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Quote__c</fullName>
    <label>Quotation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>