force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ReqShipDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReqShipDate__c</fullName>
    <label>Requested ship date</label>
    <type>Date</type>
</CustomField>