force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SalBranch__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalBranch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AR Branch</label>
    <referenceTo>CommercientSF__SalBranch__c</referenceTo>
    <relationshipLabel>Syspro Sales Orders</relationshipLabel>
    <relationshipName>Syspro_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>