force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrder__c</fullName>
    <label>Sales order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>