force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Salesperson2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Salesperson2__c</fullName>
    <label>2nd salesperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>