force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SalSalesperson__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalSalesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Person</label>
    <referenceTo>CommercientSF__SalSalesPerson__c</referenceTo>
    <relationshipLabel>Syspro Sales Orders</relationshipLabel>
    <relationshipName>Syspro_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>