force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ScheduledOrdFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ScheduledOrdFlag__c</fullName>
    <label>Scheduled order flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>