force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SerialisedFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SerialisedFlag__c</fullName>
    <label>Flag to indicate if any order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>