force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ShipAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShipAddr2__c</fullName>
    <label>Ship to address line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>