force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__ShippingInstrs__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShippingInstrs__c</fullName>
    <label>Shipping instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>