force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__Source__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Source__c</fullName>
    <formula>IF(  CommercientSF__InvoiceNumber__c == &apos;_&apos; || CommercientSF__InvoiceNumber__c == &apos;Disp&apos; , &apos;SorMaster&apos;, &apos;SorMasterRep&apos;)</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>