force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SourceWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SourceWarehouse__c</fullName>
    <label>Source warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>