force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__SpecialInstrs__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SpecialInstrs__c</fullName>
    <label>Special instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>