force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__StandardComment__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StandardComment__c</fullName>
    <label>Standard comment code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>