force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TargetWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TargetWarehouse__c</fullName>
    <label>Target warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>