force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TaxExemptFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxExemptFlag__c</fullName>
    <label>Tax status flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>