force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TaxExemptOverrride__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxExemptOverrride__c</fullName>
    <label>TaxExemptOverrride</label>
    <length>1</length>
    <type>Text</type>
</CustomField>