force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TpmEvaluatedFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TpmEvaluatedFlag__c</fullName>
    <label>TMP evaluated flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>