force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TransactionNature__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransactionNature__c</fullName>
    <label>Nature of transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>