force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/CommercientSF__TransportMode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransportMode__c</fullName>
    <label>Mode of transport</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>