force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/commissionsales3__c.field-meta.xml
<CustomField>
    <fullName>commissionsales3__c</fullName>
    <label>CommissionSales3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>