force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/commissionsales4__c.field-meta.xml
<CustomField>
    <fullName>commissionsales4__c</fullName>
    <label>CommissionSales4</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>