force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/detailstatus__c.field-meta.xml
<CustomField>
    <fullName>detailstatus__c</fullName>
    <label>DetailStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>