force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/detcustmvmtreqd__c.field-meta.xml
<CustomField>
    <fullName>detcustmvmtreqd__c</fullName>
    <label>DetCustMvmtReqd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>