force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/discpct3__c.field-meta.xml
<CustomField>
    <fullName>discpct3__c</fullName>
    <label>DiscPct3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>