force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/documentformat__c.field-meta.xml
<CustomField>
    <fullName>documentformat__c</fullName>
    <label>DocumentFormat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>