force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/edisource__c.field-meta.xml
<CustomField>
    <fullName>edisource__c</fullName>
    <label>EdiSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>