force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/entinvoicedate__c.field-meta.xml
<CustomField>
    <fullName>entinvoicedate__c</fullName>
    <label>EntInvoiceDate</label>
    <type>DateTime</type>
</CustomField>