force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/faxinvinbatch__c.field-meta.xml
<CustomField>
    <fullName>faxinvinbatch__c</fullName>
    <label>FaxInvInBatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>