force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/hierarchyflag__c.field-meta.xml
<CustomField>
    <fullName>hierarchyflag__c</fullName>
    <label>HierarchyFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>