force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/ibtflag__c.field-meta.xml
<CustomField>
    <fullName>ibtflag__c</fullName>
    <label>IbtFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>