force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/invoicecount__c.field-meta.xml
<CustomField>
    <fullName>invoicecount__c</fullName>
    <label>InvoiceCount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>