force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/nextdetailline__c.field-meta.xml
<CustomField>
    <fullName>nextdetailline__c</fullName>
    <label>NextDetailLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>