force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/quoteversion__c.field-meta.xml
<CustomField>
    <fullName>quoteversion__c</fullName>
    <label>QuoteVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>