force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/salesordersource__c.field-meta.xml
<CustomField>
    <fullName>salesordersource__c</fullName>
    <label>SalesOrderSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>