force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/salesordersrcdesc__c.field-meta.xml
<CustomField>
    <fullName>salesordersrcdesc__c</fullName>
    <label>SalesOrderSrcDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>