force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/salesperson3__c.field-meta.xml
<CustomField>
    <fullName>salesperson3__c</fullName>
    <label>salesperson3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>