force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/salesperson4__c.field-meta.xml
<CustomField>
    <fullName>salesperson4__c</fullName>
    <label>salesperson4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>