force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/shipaddr3loc__c.field-meta.xml
<CustomField>
    <fullName>shipaddr3loc__c</fullName>
    <label>ShipAddr3Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>