force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/shippinginstrscod__c.field-meta.xml
<CustomField>
    <fullName>shippinginstrscod__c</fullName>
    <label>ShippingInstrsCod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>