force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/shippinglocation__c.field-meta.xml
<CustomField>
    <fullName>shippinglocation__c</fullName>
    <label>ShippingLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>