force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/shiptogpslat__c.field-meta.xml
<CustomField>
    <fullName>shiptogpslat__c</fullName>
    <label>ShipToGpsLat</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>