force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/shiptogpslong__c.field-meta.xml
<CustomField>
    <fullName>shiptogpslong__c</fullName>
    <label>ShipToGpsLong</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>