force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/Syspro_Multi_Ship_Address__c.field-meta.xml
<CustomField>
    <fullName>Syspro_Multi_Ship_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Multi Ship Address</label>
    <referenceTo>CommercientSF__ArMultAddress__c</referenceTo>
    <relationshipLabel>Syspro Sales Orders</relationshipLabel>
    <relationshipName>Syspro_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>