force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/taxexemptoverride__c.field-meta.xml
<CustomField>
    <fullName>taxexemptoverride__c</fullName>
    <label>TaxExemptOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>