force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timedelprtedhh__c.field-meta.xml
<CustomField>
    <fullName>timedelprtedhh__c</fullName>
    <label>timedelprtedhh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>