force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timedelprtedmm__c.field-meta.xml
<CustomField>
    <fullName>timedelprtedmm__c</fullName>
    <label>timedelprtedmm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>