force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timeinvprtedhh__c.field-meta.xml
<CustomField>
    <fullName>timeinvprtedhh__c</fullName>
    <label>TimeInvPrtedhh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>