force-app/main/default/objects/CommercientSF__SorMasterRep__c/fields/timeinvprtedmm__c.field-meta.xml
<CustomField>
    <fullName>timeinvprtedmm__c</fullName>
    <label>timeinvprtedmm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>